Fix horizontal spacing and overflow

--- a/src/css/layout/container.css
+++ b/src/css/layout/container.css
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 960px;
     margin:0 auto;
-    padding: 15px 0;
+    padding: 0 15px;
 }
 
 /* clearfix */
