--- a/src/css/layout/reset.css
+++ b/src/css/layout/reset.css
@@ -1,10 +1,12 @@
 html {
   box-sizing: border-box;
-  font-size: 100%
+  font-size: 100%;
 }
 
-body {
+html, body {
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 *, *::before, *::after {
